src/assets/styles/antd-customize/generic.less
:global {
  .ant-table-content {
    .ant-table {
      .ant-table-thead > tr > th {
        text-align: center;
        background: #F5F8FA;
        color: black;
      }
    }
  }
  .ant-card{
    .ant-card:hover {
      overflow: visible;
    }
  }
  .ant-table-column-sorter-up, .ant-table-column-sorter-down {
    height: 8px !important;
    line-height: 8px !important;
    width: 16px !important;
  }
  .ant-table {
    .ant-table-thead > tr > th, .ant-table-thead > tr > th.ant-table-column-sort {
      text-align: center;
      background: @color-primary-light;
      color: white;
    }
    .ant-table-thead > tr > th.ant-table-column-has-actions.ant-table-column-has-sorters:hover {
      background: #108eb9 !important;
    }
    .ant-table-tbody > tr > td {
      text-align: center;
    }
    .ant-table-tbody > tr:hover:not(.ant-table-expanded-row) > td {
      background: #ebf2f6 !important;
    }
    &.ant-table-small {
      .ant-table-thead > tr > th {
        background: #108eb9;
      }

      .ant-table-body > table {
        padding: 0;
      }
    }
    .ant-table-column-sorters {
      display: flex !important;
      justify-content: center !important;
    }
    .ant-table-column-sorter {
      display : inline !important;
      text-align: center;
      .anticon-caret-up, .anticon-caret-down {
        font-size: 16px !important;
      }
    }
  }

  .ant-table-pagination {
    float: none!important;
    display: table;
    margin: 16px auto !important;
  }

  .ant-popover-inner {
    border: none;
    border-radius: 0;
    box-shadow: 0 0 20px rgba(100, 100, 100, 0.2);
  }

  .ant-form-item-children-icon {
    right: -30px !important;
  }

  .ant-form-item-control {
    vertical-align: middle;
  }

  .ant-modal-mask {
    background-color: rgba(55, 55, 55, 0.2);
  }

  .ant-modal-content {
    box-shadow: none;
  }

  .ant-card {
    &:hover {
      overflow: auto;
    }
  }

  .ant-pagination-item {
    margin-bottom: 8px;
  }

  .ant-select-dropdown-menu-item {
    padding: 12px 16px !important;
  }

  input[readOnly] {
    background: rgba(236, 240, 241, 0.3);
    color: #3d3d3d;
    border: 1px solid #e5e5e5;;
    &:hover, &:focus {
      border: 1px solid #e5e5e5;;
      outline: 0;
      box-shadow: none; 
    }
  }
  .ant-radio-inner {
    top: -3px !important;
  }
  .ant-confirm-body .ant-confirm-title {
    word-wrap: break-word;
  }
}

